--- a/Traffic/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Traffic/en.lproj/MainStoryboard_iPhone.storyboard
@@ -548,21 +548,20 @@
                                             <rect key="frame" x="10" y="1" width="300" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="KVB-xp-dnP">
-                                                    <rect key="frame" x="20" y="0.0" width="260" height="44"/>
+                                                <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="5NQ-hg-GgY">
+                                                    <rect key="frame" x="203" y="8" width="79" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="onLoginAutomaticallySelected:" destination="0mc-K1-saG" eventType="valueChanged" id="Wqh-lx-4uv"/>
+                                                    </connections>
+                                                </switch>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Login Automatically:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cD2-G5-WTN">
+                                                    <rect key="frame" x="20" y="11" width="175" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <state key="normal" title="Login Automatically">
-                                                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <state key="highlighted">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="onLoginAutomaticallySelected:" destination="0mc-K1-saG" eventType="touchUpInside" id="QbW-Sf-X0t"/>
-                                                    </connections>
-                                                </button>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -632,22 +631,20 @@
                                             <rect key="frame" x="10" y="0.0" width="300" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="cFZ-ea-fXe">
-                                                    <rect key="frame" x="20" y="0.0" width="264" height="44"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <state key="normal" title="Hide Completed:">
-                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <state key="highlighted">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
+                                                <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="ZWt-qk-14v">
+                                                    <rect key="frame" x="203" y="8" width="79" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                     <connections>
-                                                        <action selector="onHideCompletedToggle:" destination="0mc-K1-saG" eventType="touchUpInside" id="oLy-RC-cfy"/>
+                                                        <action selector="onHideCompletedToggle:" destination="0mc-K1-saG" eventType="valueChanged" id="yfF-bL-Yw4"/>
                                                     </connections>
-                                                </button>
+                                                </switch>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Hide Completed:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7Ty-Yu-83Q">
+                                                    <rect key="frame" x="20" y="11" width="175" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -743,10 +740,8 @@
                     <navigationItem key="navigationItem" title="Settings" id="276-y4-HXz"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <connections>
-                        <outlet property="hideCompletedCell" destination="BmL-Tr-3Qq" id="JqO-7D-Uci"/>
-                        <outlet property="hideCompletedToggleButton" destination="cFZ-ea-fXe" id="EEP-Uv-0Hd"/>
-                        <outlet property="loginAutomaticallyCell" destination="bzg-gc-mq5" id="iKa-KI-TXt"/>
-                        <outlet property="loginAutomaticallyToggleButton" destination="KVB-xp-dnP" id="Kka-1q-HWU"/>
+                        <outlet property="hideCompletedTasksSwitch" destination="ZWt-qk-14v" id="Lj8-aP-RJP"/>
+                        <outlet property="loginAutomaticallySwitch" destination="5NQ-hg-GgY" id="2qV-iF-4bn"/>
                         <outlet property="maxAllocationResultsTextInput" destination="DId-XN-Rdy" id="MPh-Qu-xRs"/>
                         <outlet property="timeIntervalTextInput" destination="WVS-Ub-3wi" id="G4W-pD-mN1"/>
                     </connections>
