--- a/Traffic/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Traffic/en.lproj/MainStoryboard_iPad.storyboard
@@ -91,7 +91,7 @@
                                                     <rect key="frame" x="335" y="7" width="262" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                 </textField>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -164,8 +164,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="akd-pn-Hta">
-                                                    <rect key="frame" x="0.0" y="0.0" width="678" height="44"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="617" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                     <state key="normal" title="Follow Traffic Live on Twitter">
                                                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -190,8 +190,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="2ob-mL-Af7">
-                                                    <rect key="frame" x="0.0" y="0.0" width="678" height="44"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <rect key="frame" x="0.0" y="-1" width="617" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                     <state key="normal" title="Follow Traffic Live on Facebook">
                                                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -1036,7 +1036,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <imageView key="tableHeaderView" userInteractionEnabled="NO" contentMode="bottom" image="whiteLogo320.png" id="awR-ky-14A">
-                            <rect key="frame" x="0.0" y="0.0" width="768" height="526"/>
+                            <rect key="frame" x="0.0" y="0.0" width="768" height="350"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <sections>
@@ -1046,7 +1046,7 @@
                             <tableViewSection id="HKn-id-F1C">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="uZt-d2-dna">
-                                        <rect key="frame" x="0.0" y="556" width="768" height="45"/>
+                                        <rect key="frame" x="0.0" y="380" width="768" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="45" y="1" width="678" height="43"/>
@@ -1070,13 +1070,13 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="c3o-Cc-jsM">
-                                        <rect key="frame" x="0.0" y="601" width="768" height="45"/>
+                                        <rect key="frame" x="0.0" y="425" width="768" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="45" y="0.0" width="678" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Required" minimumFontSize="17" id="iwA-rq-DHb">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Your API key goes here" placeholder="Required" minimumFontSize="17" id="iwA-rq-DHb">
                                                     <rect key="frame" x="123" y="8" width="535" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -1098,7 +1098,7 @@
                             <tableViewSection id="tgy-uu-X7d">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="uru-y5-mfo">
-                                        <rect key="frame" x="0.0" y="666" width="768" height="46"/>
+                                        <rect key="frame" x="0.0" y="490" width="768" height="46"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="45" y="1" width="678" height="43"/>
@@ -1167,7 +1167,7 @@
         <scene sceneID="24">
             <objects>
                 <tableViewController storyboardIdentifier="masterView" title="Master" clearsSelectionOnViewWillAppear="NO" id="19" customClass="MasterViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="148" sectionHeaderHeight="22" sectionFooterHeight="22" id="20">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" rowHeight="148" sectionHeaderHeight="22" sectionFooterHeight="22" id="20">
                         <rect key="frame" x="0.0" y="64" width="320" height="660"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1217,7 +1217,7 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="9c8-4f-aG0">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="clock320.png" id="9c8-4f-aG0">
                                             <rect key="frame" x="211" y="3" width="25" height="26"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -1236,7 +1236,7 @@
                                     <outlet property="companyLabel" destination="3c7-sn-8yE" id="U1U-dC-fml"/>
                                     <outlet property="daysToDeadlineLabel" destination="6gN-Ql-iwu" id="uUr-zw-cRy"/>
                                     <outlet property="happyRating" destination="VQ6-pR-wOD" id="t5p-ln-JOX"/>
-                                    <outlet property="isRecordingIcon" destination="9c8-4f-aG0" id="AEA-04-IRV"/>
+                                    <outlet property="isRecordingIcon" destination="9c8-4f-aG0" id="iUP-pX-f5G"/>
                                     <outlet property="jobLabel" destination="kh9-YY-f6z" id="uUH-Kc-Da2"/>
                                     <outlet property="timeCompletedLabel" destination="YHw-Qc-QBb" id="J9U-Az-ig2"/>
                                     <outlet property="timesheetLabel" destination="gL1-AI-rxb" id="9sa-aa-kGE"/>
@@ -1290,6 +1290,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="clock320.png" width="30" height="30"/>
         <image name="happyRatingHappySmall320.png" width="40" height="40"/>
         <image name="play320.png" width="48" height="48"/>
         <image name="stop320.png" width="48" height="48"/>
